[package]
name = "untilfail"
version = "0.1.0"
authors = ["Jonas Danielsson <jonas@threetimestwo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rand = "0.8.0"
tempfile = "3.2.0"
ctrlc = { version = "3.0", features = ["termination"] }
nix = "0.21.0"
lazy_static = "1.4.0"
